[package]
name = "ue-types"
version = "0.1.1"
edition = "2021"
description = "Common Unreal Engine data types for Rust game servers"
license = "MIT"

[dependencies]
glam = { version = "0.24", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
serde_json = "1.0"